simplifying minimal test case